<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">

        <ListPreference
            android:key="@string/pref_key_columns"
            android:title="@string/pref_columns_title"
            android:summary="@string/pref_columns_summary"
            android:defaultValue="2"
            android:entryValues="@array/column_values"
            android:entries="@array/column_labels" />

        <SwitchPreference
            android:key="@string/pref_key_light"
            android:title="@string/pref_light_title"
            android:summary="@string/pref_light_summary"
            android:defaultValue="off" />

        <ListPreference
            android:key="@string/pref_key_language"
            android:title="@string/language_title"
            android:summary="@string/language_summary"
            android:defaultValue="2"
            android:entryValues="@array/language_values"
            android:entries="@array/language_labels" />

    </PreferenceCategory>

</PreferenceScreen>