<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_nav_all_light"
            android:title="@string/nav_all"
            android:enabled="false"
            android:checkable="false" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_nav_fav_light"
            android:title="@string/nav_favorites"
            android:checkable="false" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_nav_share_light"
                android:title="@string/nav_share" />
        </menu>
    </item>

</menu>
